--- a/Esame_20170626_TurnoC/.classpath
+++ b/Esame_20170626_TurnoC/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/c3p0-0.9.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.41-bin.jar"/>
-	<classpathentry kind="lib" path="lib/jgrapht-core-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-core-1.3.0.jar"/>
+	<classpathentry kind="var" path="JUNIT_HOME/junit.jar" sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.0.0/src/org.junit_3.8.1/junitsrc.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
